@@ -1,3 +1,9 @@
+2019-11-12  Ilya Leoshkevich  <iii@linux.ibm.com>
+
+	PR rtl-optimization/92430
+	* cfgcleanup.c (pass_jump_after_combine::execute): Free
+	dominance info at the beginning.
+
 2019-11-12  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/92460
